<?xml version="1.0" encoding="UTF-8"?>
<!--

       Copyright 2010-2024 the original author or authors.

       Licensed under the Apache License, Version 2.0 (the "License");
       you may not use this file except in compliance with the License.
       You may obtain a copy of the License at

          https://www.apache.org/licenses/LICENSE-2.0

       Unless required by applicable law or agreed to in writing, software
       distributed under the License is distributed on an "AS IS" BASIS,
       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
       See the License for the specific language governing permissions and
       limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.mybatis</groupId>
    <artifactId>mybatis-parent</artifactId>
    <version>48</version>
    <relativePath />
  </parent>

  <artifactId>mybatis-migrations</artifactId>
  <version>3.4.1-SNAPSHOT</version>

  <name>MyBatis Migrations</name>
  <url>https://www.mybatis.org/migrations/</url>

  <contributors>
    <contributor>
      <name>Riccardo Cossu</name>
      <email>riccardo.cossu@gmail.com</email>
    </contributor>
  </contributors>

  <scm>
    <connection>scm:git:ssh://git@github.com/mybatis/migrations.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/mybatis/migrations.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/mybatis/migrations/</url>
  </scm>
  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/mybatis/migrations/issues</url>
  </issueManagement>
  <ciManagement>
    <system>GitHub</system>
    <url>https://github.com/mybatis/migrations/actions</url>
  </ciManagement>
  <distributionManagement>
    <site>
      <id>gh-pages-scm</id>
      <name>Mybatis GitHub Pages</name>
      <url>scm:git:ssh://git@github.com/mybatis/migrations.git</url>
    </site>
  </distributionManagement>

  <properties>
    <!-- Java Usage -->
    <java.version>8</java.version>
    <java.release.version>8</java.release.version>

    <findbugs.onlyAnalyze>org.apache.ibatis.migration</findbugs.onlyAnalyze>
    <clirr.comparisonVersion>3.2.0</clirr.comparisonVersion>
    <module.name>org.mybatis.migrations</module.name>

    <!-- Reproducible Builds -->
    <project.build.outputTimestamp>1723308152</project.build.outputTimestamp>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.12.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>5.12.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>uk.org.webcompere</groupId>
      <artifactId>system-stubs-jupiter</artifactId>
      <version>2.1.7</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.bytebuddy</groupId>
      <artifactId>byte-buddy</artifactId>
      <version>1.17.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.bytebuddy</groupId>
      <artifactId>byte-buddy-agent</artifactId>
      <version>1.17.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.27.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>2.7.4</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.openjdk.nashorn</groupId>
      <artifactId>nashorn-core</artifactId>
      <version>15.6</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.mycila</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <configuration>
            <mapping combine.children="append">
              <policy>DOUBLESLASH_STYLE</policy>
            </mapping>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>appassembler-maven-plugin</artifactId>
        <version>2.1.0</version>
        <configuration>
          <repositoryLayout>flat</repositoryLayout>
          <repositoryName>lib</repositoryName>
          <endorsedDir>lib</endorsedDir>
          <extraJvmArguments>-Xms512m -Xmx512m -XX:-UseGCOverheadLimit</extraJvmArguments>
          <binFileExtensions>
            <windows>.cmd</windows>
          </binFileExtensions>
          <programs>
            <program>
              <mainClass>org.apache.ibatis.migration.Migrator</mainClass>
              <id>migrate</id>
            </program>
          </programs>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>assemble</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>single</goal>
            </goals>
            <phase>package</phase>
            <configuration>
              <descriptors>
                <descriptor>${project.basedir}/src/main/assembly/bundle.xml</descriptor>
              </descriptors>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <configuration>
          <licenseSets>
            <licenseSet>
              <excludes combine.children="append">
                <exclude>**/README</exclude>
                <exclude>**/template_README</exclude>
              </excludes>
            </licenseSet>
          </licenseSets>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>security-manager</id>
      <activation>
        <jdk>[18,)</jdk>
      </activation>
      <properties>
        <argLine>-Djava.security.manager=allow</argLine>
      </properties>
    </profile>
  </profiles>

</project>
